--- a/biodata.html
+++ b/biodata.html
@@ -31,7 +31,7 @@
 <p>Live in Johor Bahru</p>
 <p>Diploma in Information Management</p>
 <p>Study at UiTM Segamat</p>
-<p> I like cafe hunting with my sister and cooking</p>
+<p> I like to cafe hunting with my sister and cooking</p>
 <p>I have three siblings which is me, my brother and my sister</p>
 
 <h1>FAVOURITE MOVIES</h1>   
