--- a/favfood.html
+++ b/favfood.html
@@ -7,7 +7,7 @@
 
 <div class="header">
  <div class="button">
-    <a href="Biodata.html">BACK</a>
+    <a href="biodata.html">BACK</a>
     </div>
 
     <h1><header>MY FAVOURITE FOODS AND DRINKS</header></h1>
