--- a/Gallery.html
+++ b/Gallery.html
@@ -34,7 +34,7 @@
 
 <br>
 <div class="menu">
-          <a href="me.html">ME</a>
+          <a href="Me.html">ME</a>
           </div>
 <div class="menu">
           <a href="Friends.html">FRIENDS</a>
